# peripherals

./: LICENSE  README.md
hid/: CMakeLists.txt  package.xml
hid/launch/: demo_rumble.launch  demo_turtle.launch  demo_turtle_rumble.launch  turtle_control_demo.launch
hid/msg/: ConnStatus.msg  LEDPattern.msg  RumbleCmd.msg
hid/scripts/: demo_roboteq  demo_rumble  demo_turtle  demo_turtle_rumble
hid/src/xbox_360/: xbox_360.cpp  xbox_360.h  xbox_360_Services.h  xbox_360_StatePub.h  xbox_360_Subscriptions.h  xbox_360_main.cpp
hid/www/html/: xbox360.html
hid/www/html/ros/xbox360/: index.html
hid/www/js/: app.js  draw_xbox360.js  rosbridge_xbox360.js
imu/: CMakeLists.txt  package.xml
imu/msg/: Controller360State.msg
imu/src/xbox_360/: xbox_360_Services.h
imu/srv/: Ping.srv  SetLED.srv  SetRumble.srv
mot/: CMakeLists.txt  package.xml
mot/launch/: demo_roboteq.launch
mot/msg/: SpeedCmd.msg
mot/scripts/: demo_roboteq
mot/src/roboteq/: roboteq.cpp  roboteq.h
mot/src/roboteq_sm/: roboteq_sm.cpp  roboteq_sm.h  roboteq_sm_Subscriptions.h
mot/srv/: SetCurrentLimits.srv  SetSpeed.srv
peripherals/: CMakeLists.txt  package.xml
