<?xml version="1.0"?>
<package>
  <name>hid</name>
  <version>0.0.1</version>
  <description>Supports a uniform interface for a variety of human interface devices (xbox game pad, keyboard, etc.)</description>

  <maintainer email="daniel@roadnarrows.com">daniel packard</maintainer>
  <license>BSD</license>

  <url type="website">http://github.com/roadnarrows-robotics/peripherals</url>

  <author email="daniel@roadnarows.com">Daniel Packard</author>
  <author email="rknight@roadnarows.com">Robin Knight</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
