<?xml version="1.0"?>
<package>
  <name>mot</name>
  <version>0.0.0</version>
  <description>The mot package</description>

  <maintainer email="daniel@roadnarrows.com">daniel packard</maintainer>

  <license>BSD</license>

  <!-- <url type="website">http://ros.org/wiki/mot</url> -->

  <author email="daniel@roadnarrows.com">Daniel Packard</author>
  <author email="jessica@roadnarrows.com">Jessica Trujillo</author>
  <author email="maurice@roadnarrows.com">Maurice Woods III</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
